fix category filter alignment

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -236,6 +236,8 @@ body {
 }
 .Select {
     display: inline-block;
+    margin-right: 200px;
+    margin-top: 14px;
 }
 .Select-input{
 	width: 200px;
